--- a/frontend/ecommerce-frontend/package.json
+++ b/frontend/ecommerce-frontend/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
