--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.ts"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.2"
   }
 }
