--- a/backend/.env
+++ b/backend/.env
@@ -2,11 +2,15 @@ PORT = 3000
 DB_CONNECTION = mongodb+srv://admin:admin@cluster0.eit1t2x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_KEY = 981y47ta29!n7asdASD1@H^$%kh=//T
 JWT_EXPIRES = 1d
-API_URL = https://studious-couscous-x9gxvg999g2v5wx-3000.app.github.dev/api/v1
-FE_ORIGIN = https://studious-couscous-x9gxvg999g2v5wx-5173.app.github.dev 
+API_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev//api/v1
+FE_ORIGIN = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev
 
 MAILER_HOST = smtp.gmail.com
 MAILER_PORT = 465
 MAILER_SERVICE = Gmail
 MAILER_USER = richardo.ivan@gmail.com
 MAILER_PASS = wjkofdxuzkjevnue
+
+CLOUDINARY_CLOUD_NAME = davuilgt1 
+CLOUDINARY_API_KEY = 825576455196362
+CLOUDINARY_API_SECRET = OKF0pwta1mPB6iDLr2dT6i92PNw
