--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ DB_CONNECTION = mongodb+srv://admin:admin@cluster0.eit1t2x.mongodb.net/?retryWri
 JWT_KEY = 981y47ta29!n7asdASD1@H^$%kh=//T
 JWT_EXPIRES = 1d
 API_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev//api/v1
-FE_ORIGIN = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev
+FE_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev
 
 MAILER_HOST = smtp.gmail.com
 MAILER_PORT = 465
