--- a/frontend/ecommerce-frontend/package.json
+++ b/frontend/ecommerce-frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -20,7 +21,8 @@
     "react-dotenv": "^0.1.3",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
