--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@ PORT = 3000
 DB_CONNECTION = mongodb+srv://admin:admin@cluster0.eit1t2x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_KEY = 981y47ta29!n7asdASD1@H^$%kh=//T
 JWT_EXPIRES = 1d
-API_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev//api/v1
-FE_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev
+API_URL = https://studious-couscous-x9gxvg999g2v5wx-3000.app.github.dev/api/v1
+FE_URL = https://studious-couscous-x9gxvg999g2v5wx-5173.app.github.dev
 
 MAILER_HOST = smtp.gmail.com
 MAILER_PORT = 465
