trying to fix orderSchema first to move calculation to backend side

--- a/backend/.env
+++ b/backend/.env
@@ -15,6 +15,7 @@ CLOUDINARY_CLOUD_NAME = davuilgt1
 CLOUDINARY_API_KEY = 825576455196362
 CLOUDINARY_API_SECRET = OKF0pwta1mPB6iDLr2dT6i92PNw
 
+PAYPAL_BASE_URL = https://api-m.sandbox.paypal.com
 PAYPAL_CLIENT_ID = AQvyqBwM3U7jRILb7xxUnDYTdou3kFj8z-KvEWey2bJTV10AfZdi_VdR3YlEMbiG0Y4PZR-dxrAH1utn
 PAYPAL_CLIENT_SECRET = EKnFD71SnHuCEgI6OKKSU5PnmuAdfOEEJmJStSbpn0SzTGEDxwQ5OKa3-Jq0AvdqfsSewroQ1soSfFNI
 PAYPAL_EMAIL = sb-sdbpq32610746@business.example.com
