--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.3",
@@ -23,7 +24,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.12"
   },
   "devDependencies": {
