--- a/backend/.env
+++ b/backend/.env
@@ -18,5 +18,7 @@ CLOUDINARY_API_SECRET = OKF0pwta1mPB6iDLr2dT6i92PNw
 PAYPAL_BASE_URL = https://api-m.sandbox.paypal.com
 PAYPAL_CLIENT_ID = AQvyqBwM3U7jRILb7xxUnDYTdou3kFj8z-KvEWey2bJTV10AfZdi_VdR3YlEMbiG0Y4PZR-dxrAH1utn
 PAYPAL_CLIENT_SECRET = EKnFD71SnHuCEgI6OKKSU5PnmuAdfOEEJmJStSbpn0SzTGEDxwQ5OKa3-Jq0AvdqfsSewroQ1soSfFNI
-PAYPAL_EMAIL = sb-sdbpq32610746@business.example.com
-PAYPAL_PASSWORD = nP/$wQ4K
+PAYPAL_EMAIL = sb-cooqd32599004@personal.example.com
+PAYPAL_PASSWORD = k$8+Ec,l
+
+
