--- a/frontend/ecommerce-frontend/package.json
+++ b/frontend/ecommerce-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.6.0",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.7",
     "core-js": "^3.38.1",
