--- a/frontend/ecommerce-frontend/package.json
+++ b/frontend/ecommerce-frontend/package.json
@@ -13,6 +13,7 @@
     "@paypal/react-paypal-js": "^8.6.0",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.38.1",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
