--- a/backend/.env
+++ b/backend/.env
@@ -5,8 +5,10 @@ JWT_EXPIRES = 1d
 # API_URL = https://studious-couscous-x9gxvg999g2v5wx-3000.app.github.dev/api/v1
 # FE_URL = https://studious-couscous-x9gxvg999g2v5wx-5173.app.github.dev
 
-API_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-3000.app.github.dev/api/v1
-FE_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev
+# API_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-3000.app.github.dev/api/v1
+# FE_URL = https://obscure-spork-7v9jxqqwwr7xcxvjr-5173.app.github.dev
+
+FE_URL = https://66e9024c1de1e27f8e398380--beefstew-sheepo.netlify.app
 
 MAILER_HOST = smtp.gmail.com
 MAILER_PORT = 465
