--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
+    "start": "tsx index.tsx",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch index.tsx"
   },
