--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
-    "start": "tsx index.tsx",
+    "start": "tsx index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch index.tsx"
+    "dev": "tsx watch index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -28,7 +28,9 @@
     "nodemailer": "^6.9.12"
   },
   "devDependencies": {
+    "@types/node": "^22.5.5",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.6.2"
   }
 }
