--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.12"
+    "nodemailer": "^6.9.12",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
